--- a/web/themes/custom/spacebase/scss/_nav.scss
+++ b/web/themes/custom/spacebase/scss/_nav.scss
@@ -511,8 +511,7 @@ body.nav-open{
     .navbar-nav{
       li{
         display: inline-block;
-        width: 33%;
-        float: left;
+        width: 32%;
         text-align: center;
         padding: 10px;
         &.active{
